--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^6.1.2",
+    "classnames": "^2.3.1",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.45.2"
   },
   "devDependencies": {
     "@types/node": "17.0.7",
